+ Update line color.

--- a/src/views/EditorView/Editor/Editor.scss
+++ b/src/views/EditorView/Editor/Editor.scss
@@ -49,7 +49,7 @@
     transform: translate(-50%, -50%);
     border-radius: 50%;
     pointer-events: none;
-    border: 2px solid white;
+    border: 2px solid #0fffe9;
     background-color: white;
     z-index: 100000;
 
